fix(bootstrap4-theme): testimonials and minor alignment fixes

--- a/packages/bootstrap4-theme/src/scss/extends/_image-text-block.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_image-text-block.scss
@@ -23,6 +23,7 @@
     flex: 1;
 
     img {
+      width: 100%;
       object-fit: cover;
     }
 
